Remove target attribute from Documentation link in footer

--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
               </svg>
               GitHub
             </a>
-            <a href="documentation.html" target="_blank">Documentation</a>
+            <a href="documentation.html">Documentation</a>
           </div>
           <div class="footer-privacy">
             <svg
