--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="logo-text">
               <h1>UniFile</h1>
-              <span class="logo-subtitle">Universal File Converter</span>
+              <span class="logo-subtitle">Universal Offline File Converter</span>
             </div>
           </div>
           <nav class="header-nav">
